--- a/src/app/components/card/card-pricing/card-pricing.component.html
+++ b/src/app/components/card/card-pricing/card-pricing.component.html
@@ -6,11 +6,11 @@
   <div class="card-pricing_value">
     <div class="cardpricing__value__console">
       <span>|</span>
-      <p>Digital PS4</p>
+      <p>{{gameType}}</p>
 
     </div>
     <div class="cardpricing__value__money">
-      <p class="game-price">R$ 129,99</p>
+      <p class="game-price">{{ gamePrice }}</p>
     </div>
 
   </div>
