--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,11 +1,12 @@
 <a href="#" class="card__container">
   <img class="card__img"
-  src="assets/bt-5.jpg" alt="">
+  [src]=[gameCover] alt="">
 
   <app-card-label
-  gameLabel="Digital">
+  gameLabel="{{ gameLabel }}" >
 
   </app-card-label>
+  <app-card-pricing gameType="{{ gameType}}" gamePrice="{{ gamePrice}}"></app-card-pricing>
 </a>
 
 
