--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,39 @@
 <div class="home__container">
-  <app-card></app-card>
+  <app-card
+  gameCover="assets/bt-1.jpg"
+  gameLabel="DIGITAL"
+  gameType="DIGITAL | PS4"
+  gamePrice="R$ 159,99"
+
+  >
+</app-card>
+<app-card
+gameCover="assets/bt-4.jpg"
+gameLabel="EXCLUSIVE"
+gameType="DISC | PS5"
+gamePrice="R$ 259,99"
+>
+
+</app-card>
+
+<app-card
+gameCover="https://cdn.marvel.com/content/1x/msm2_sgf_4k_keyart_legal_2023.jpg"
+gameLabel="EXCLUSIVE"
+gameType="DISC | PS5"
+gamePrice="R$ 359,99"
+>
+
+</app-card>
+
+<app-card
+gameCover="assets/ac-cover.jpg"
+gameLabel="DIGITAL"
+gameType="DIGITAL | PS3"
+gamePrice="R$ 59,99"
+>
+
+</app-card>
+
 
 
 </div>
