--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -3,13 +3,8 @@
     <img src="assets/ps-logo.png" alt="" width="140px" height ="32px">
 
   </div>
-  <div class="menu-bar__item">
-    <ul>
-     <li><a href="">Youtube</a></li>
-     <li><a href="">Linkedin</a></li>
-     <li><a href="">GitHub</a></li>
-    </ul>
 
-  </div>
+  <app-menu-bar-item></app-menu-bar-item>
+
 
 </div>
